# mailmerize_ingester

./: .gitignore  Cargo.toml  docker-compose.yml
src/: main.rs  redis_util.rs
